--- a/EnableMeditation/manifest.json
+++ b/EnableMeditation/manifest.json
@@ -4,7 +4,8 @@
   "author": "xen",
   "name": "Enable Meditation",
   "uniqueName": "xen.EnableMeditation",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "owmlVersion": "2.8.0",
-  "dependencies": []
+  "dependencies": [],
+  "donateLink": "https://www.patreon.com/xen42"
 }
